Creating metrics logic and endpoint